feat: updated docker file, swagger
