# services/vault-of-time/src/docs/swagger.json
@@ -38,6 +38,14 @@
                     "events"
                 ],
                 "summary": "List historical events",
+                "parameters": [
+                    {
+                        "type": "number",
+                        "description": "Error injection rate between 0 and 1",
+                        "name": "errorRate",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
